--- a/Dissertacao_Marcelo_Goncalves/dissertacao.bib
+++ b/Dissertacao_Marcelo_Goncalves/dissertacao.bib
@@ -12,6 +12,18 @@
   year={2012},
   school={Universidade de Fortaleza}
 }
+@inproceedings{cunha2013b,
+  title={{A Declarative Environment for Automatic Performance Evaluation in IaaS Clouds}},
+  author={Cunha, M. and Mendon{\c{c}}a, N. and Sampaio, A.},
+  OPTauthor={Cunha, M. and others},
+  booktitle={Proc. of the IEEE 6th International Conference on Cloud Computing (IEEE CLOUD)},
+  OPTseries={IEEE CLOUD},
+  OPTbooktitle={Proc. of IEEE CLOUD 2013},
+  pages={285--292},
+  year={2013},
+  OPTorganization={IEEE Computer Society}
+}
+
 @inproceedings{iosup2011performance,
   title={On the performance variability of production cloud services},
   author={Iosup, Alexandru and Yigitbasi, Nezih and Epema, Dick},
@@ -300,6 +312,20 @@
 	note= "\url{http://www.spec.org/jvm2008/}",
 	year = "2008"
 }
+
+@article{Murugesan2014,
+  title={The Rise of the Clouds: Progress and Prospects},
+  author={Murugesan, S. and Bojanova, I.},
+  journal={Computing Now},
+  volume={7},
+  number={8},
+  OPTpages={},
+  month=aug,
+  year={2014},
+  publisher={IEEE Computer Society},
+  note={Available online at \url{http://www.computer.org/portal/web/computingnow/archive/august2014}.}
+}
+
 @article{scheuner2014cloud,
   title={Cloud WorkBench-Infrastructure-as-Code Based Cloud Benchmarking},
   author={Scheuner, Joel and Leitner, Philipp and Cito, Jurgen and Gall, Harald},
