--- a/Dissertacao_Marcelo_Goncalves/capitulos/introducao.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/introducao.tex
@@ -106,7 +106,7 @@ malkowski2010cloudxplor}. Uma desvantagem dos trabalhos que seguem a abordagem p
 aplicação. Isto se deve principalmente a fatores como: diferenças conceituais entre o comportamento real da aplicação e  
 os modelos de simulação, a ausência de \emph{benchmarks} com funcionalidades e demandas similares aos da aplicação, além da instabilidade comuns aos serviços de nuvem. Por outro lado, trabalhos da abordagem preditiva têm a grande vantagem de não onerar os usuários, pois não exigem a implantação e execução da aplicação no ambiente de nuvem real.
 
-Trabalhos que utilizam a abordagem empírica são baseadas na implantação das aplicações alvo na nuvem 
+Trabalhos que utilizam a abordagem empírica são baseados na implantação das aplicações alvo na nuvem 
 e em testes de carga. Esses trabalhos normalmente oferecem suporte aos usuários
 para automatizar as tarefas de instalar, configurar e testar as aplicações no
 ambiente da nuvem, eliminando uma série de procedimentos manuais custosos. Por
