--- a/Dissertacao_Marcelo_Goncalves/capitulos/fundamentacao-relacionados.tex
+++ b/Dissertacao_Marcelo_Goncalves/capitulos/fundamentacao-relacionados.tex
@@ -466,7 +466,7 @@ Para ilustrar o uso do \textit{Cloud WorkBench}, foi realizado um pequeno experi
 
 Após a análise dos resultados, os autores concluem que o \textit{Cloud WorkBench} suporta a realização de experimentos em nuvens de infraestrutura, e que toda a complexidade da configuração do ambiente pode ficar codificada. O que diminui a ocorrência de erros decorrentes de eventuais intervenções manuais.
 
-\subsection{Análise Compartiva}
+\subsection{Análise Comparativa}
 
 \subsubsection{Critérios de Comparação}
 
